# alienfx

./: .travis.yml  CMakeLists.txt  README.md  alienfx  alienfx.cpp  alienfx_old_rework.cpp  consts.h  zonescan.sh
alienfx/: CMakeLists.txt  alienfx.cpp
alienfxdev/: CMakeLists.txt  alienfx_cmdparser.cpp  alienfx_device.cpp  alienfx_utils.cpp
alienfxdev/include/: alienfx_cmdparser.h  alienfx_device.h  alienfx_devices.h  alienfx_public_constants.h  alienfx_states.h  alienfx_utils.h
libalienfx/: CMakeLists.txt  alienfx_cmdparser.cpp  alienfx_device.cpp
libalienfx/include/: alienfx_commands.h  alienfx_constants.h  alienfx_device.h  alienfx_devices.h
