CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(alienfx)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

FIND_PACKAGE(libusb-1.0 REQUIRED)

INCLUDE_DIRECTORIES(${LIBUSB_1_INCLUDE_DIRS})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#add_subdirectory()
ADD_SUBDIRECTORY(libalienfx)

ADD_EXECUTABLE(alienfx alienfx.cpp)
TARGET_LINK_LIBRARIES(alienfx libalienfx)

INSTALL(TARGETS alienfx DESTINATION bin)
