CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ALIENFX)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

FIND_PACKAGE(libusb-1.0 REQUIRED)

INCLUDE_DIRECTORIES(${ALIENFX_SOURCE_DIR})
INCLUDE_DIRECTORIES(${LIBUSB_1_INCLUDE_DIRS})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_SUBDIRECTORY(alienfxdev)
ADD_SUBDIRECTORY(alienfx)
